--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Belajar Html</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <div class="navbar__container"></div>
+    <div>
+        <div class="kotak"></div>
+    </div>
+
+    <!-- <img src="./428737.jpg" alt="ini gambar saya"> -->
 </body>
 
 </html>
